legacy/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: cinemaservice.k8s.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cinemaservice
                port:
                  number: 8080
